# crewai-email-triage

./: .bandit  .coverage.e2b.local.2206.XLttdJLx  .coverage.e2b.local.2207.XHUgxzyx  .coverage.e2b.local.2208.XZbFIUyx  .coverage.e2b.local.2209.XQfpkrOx  .coverage.e2b.local.2210.XuhVxahx  .coverage.e2b.local.2211.XaRklewx  .coverage.e2b.local.2212.XzoTjkyx  .coverage.e2b.local.2569.XQViqzPx  .coverage.e2b.local.2570.XRUNGvtx  .coverage.e2b.local.2571.XZLrGJEx  .coverage.e2b.local.2572.XzZNZxAx  .coverage.e2b.local.2573.XXPBuTUx  .coverage.e2b.local.2574.XnvaDnWx  .coverage.e2b.local.2575.XyIFcLwx  .coverage.e2b.local.2590.XnrHrnMx  .coverage.e2b.local.2591.XEOCLICx  .coverage.e2b.local.2592.XQZsNcmx  .coverage.e2b.local.2593.XCVplTrx  .coverage.e2b.local.2593.XlhiWgKx  .coverage.e2b.local.2594.XaIwaQwx  .coverage.e2b.local.2595.XGuGPXgx  .coverage.e2b.local.2637.XTgmwrpx  .coverage.e2b.local.2638.XkYGbUyx  .coverage.e2b.local.2639.XjBlKMpx  .coverage.e2b.local.2640.XUaTNeUx  .coverage.e2b.local.2641.XjfcFfyx  .coverage.e2b.local.2641.XzVGFRkx  .coverage.e2b.local.2642.XQhuLPOx  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  ADVANCED_REPOSITORY_IMPLEMENTATION_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_RESEARCH_BREAKTHROUGH_PUBLICATION.md  (+96 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  dependencies.yml  dependency-update.yml  deploy.yml  performance.yml  release.yml  security-scan.yml  security.yml
.terragon/: README.md  autonomous-executor.py  config.yaml  schedule-discovery.sh  value-discovery.py  value-metrics.json
.trunk/: trunk.yaml
DOCS/: backlog.json
deployment/: blue-green-automation.yml  canary-deployment-strategy.md  deployment.yml  deployment_manifest.json  multi-region-strategy.md
deployment/backup/: backup_config.json
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: configmap.yml  deployment.yml  hpa.yml  namespace.yml  pvc.yml  rbac.yml  service.yml
deployment/monitoring/: alert_rules.yml  prometheus.yml
deployment/scripts/: deploy.sh
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md  TERRAGON_USAGE_EXAMPLES.md
docs/adr/: 0001-record-architecture-decisions.md  0002-multi-agent-pipeline-architecture.md  0003-python-runtime-and-packaging.md  0004-configuration-management.md  0005-security-credential-handling.md  README.md  template.md
docs/autonomous_sdlc/: AUTONOMOUS_SDLC_COMPLETION_REPORT.md
docs/deployment/: README.md
docs/monitoring/: README.md  runbooks.md
docs/status/: AUTONOMOUS_SESSION_FINAL_SUMMARY_2025-07-27.md  AUTONOMOUS_SESSION_SUMMARY.md  AUTONOMOUS_SESSION_SUMMARY_2025-07-26.md  autonomous_session_2025-07-25.json  autonomous_session_2025-07-26-session2.json  autonomous_session_2025-07-26.json  autonomous_session_2025-07-27.json  enhanced_status_report_2025-07-27.json
docs/testing/: README.md
docs/workflows/: README.md
mlops/: experiment-tracking-config.yml  model-lifecycle-management.md  model-monitoring-framework.py
modernization/: modern-async-patterns.py  python311-migration-guide.md  type-safety-enhancements.py
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
ops/: advanced-observability.yml  chaos-engineering-suite.py  cost-optimization.yml  operational-runbooks.md  predictive-autoscaling.py  resource-rightsizing.yml
performance/: .profiling-config.yml  cpu-optimization.py  memory-optimization.py
plugins/: __init__.py  cli_extensions_plugin.py  example_sentiment_plugin.py  performance_testing_plugin.py
production_deployment/: README.md  production_config.json  start_production.py
scripts/: init-db.sql  metrics-collector.py  performance-monitor.py  performance-regression-test.py  repo-maintenance.py  test-coverage-optimizer.py
security/: advanced-threat-detection.py  compliance-automation.yml  incident-response-procedures.md  runtime-security-monitor.py  zero-trust-architecture.yml
src/crewai_email_triage/: __init__.py  adaptive_intelligence_engine.py  adaptive_monitoring_system.py  adaptive_performance_engine.py  advanced_error_recovery.py  advanced_monitoring.py  advanced_scaling.py  advanced_security.py  agent.py  agent_responses.py  ai_enhancements.py  autonomous_orchestrator.py  autonomous_reliability_framework.py  autonomous_resilience.py  backlog_executor.py  backlog_manager.py  basic_validation.py  cache.py  circuit_breaker.py  classifier.py  cli_enhancements.py  compliance.py  comprehensive_test_suite.py  config.py  core.py  default_config.json  distributed_processing.py  env_config.py  (+57 more)
testing/: advanced-test-strategies.py  mutation-testing-config.yml  property-based-testing.py
tests/: conftest.py  smoke_tests.py  sprint_acceptance_criteria.json  test_abstract_agent.py  test_advanced_error_recovery.py  test_agent_interface.py  test_agent_responses.py  test_batch_performance.py  test_circuit_breaker.py  test_classifier_agent.py  test_cli.py  test_config_injection.py  test_enhanced_ai_features.py  test_enhanced_response_agent.py  test_enhanced_summarizer.py  test_error_handling.py  test_foundational.py  test_gmail_provider.py  test_graceful_degradation.py  test_health_endpoints.py  test_input_sanitization.py  test_integration.py  test_metrics.py  test_metrics_export.py  test_neuro_quantum_research.py  test_performance_benchmarks.py  test_performance_config.py  test_pipeline.py  test_pipeline_refactoring.py  test_priority_agent.py  test_provider_logging_enhancement.py  test_provider_secure_credentials.py  test_rate_limiting.py  test_realtime_intelligence.py  test_response_agent.py  test_retry_logic.py  test_secure_credentials.py  test_string_optimization.py  test_structured_logging.py  test_structured_logging_migration.py  (+3 more)
(+32 files in other folders)
