[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai_email_triage"
version = "0.1.0"
description = "Smart email assistant that classifies, prioritizes, summarizes, and drafts replies."
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit",
    "pre-commit",
    "pytest-xdist",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
