[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai_email_triage"
version = "0.1.0"
description = "Smart email assistant that classifies, prioritizes, summarizes, and drafts replies."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=43.0.0,<46.0.0"
]

[project.optional-dependencies]
test = [
    "pytest~=8.4.0",
    "pytest-cov~=6.2.0",
    "ruff~=0.12.0",
    "bandit~=1.8.0",
    "pre-commit~=4.2.0",
    "pytest-xdist~=3.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
